[package]
name = "day-12"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools = "0.12.0"
nom.workspace = true

[dev-dependencies]
rstest.workspace = true
