[package]
name = "day-12"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cached = "0.46.1"
itertools.workspace = true
nom.workspace = true
rayon.workspace = true
rstest_reuse = "0.6.0"

[dev-dependencies]
rstest.workspace = true
