[package]
name = "day-21"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
nom.workspace = true
priority-queue = "1.3.2"

[dev-dependencies]
rstest.workspace = true
